Use a step instead of build wrapper for `withAzureKeyvault` (#141)