@@ -1,9 +1,9 @@
 package org.jenkinsci.plugins.azurekeyvaultplugin;
 
 import com.azure.core.credential.TokenCredential;
+import com.azure.identity.ClientSecretCredentialBuilder;
 import com.azure.security.keyvault.secrets.SecretClient;
 import com.azure.security.keyvault.secrets.models.KeyVaultSecret;
-import com.google.common.collect.ImmutableSet;
 import com.microsoft.azure.util.AzureCredentials;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.Extension;
@@ -13,6 +13,7 @@ import hudson.console.ConsoleLogFilter;
 import hudson.model.Item;
 import hudson.model.Run;
 import hudson.util.ListBoxModel;
+import io.jenkins.plugins.azuresdk.HttpClientRetriever;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -96,11 +97,17 @@ public class AzureKeyVaultStep extends Step {
     /**
      * Execution for {@link AzureKeyVaultStep}.
      */
-    private static class ExecutionImpl extends AbstractStepExecutionImpl {
+    static class ExecutionImpl extends AbstractStepExecutionImpl {
 
         private final String keyVaultURL;
-        private final String credentialId;
+        private String credentialId;
         private final List<AzureKeyVaultSecret> azureKeyVaultSecrets;
+
+        // legacy section
+        private String applicationId;
+        private String applicationSecret;
+        private String tenantId;
+        // end legacy section
 
         ExecutionImpl(
                 StepContext context,
@@ -114,7 +121,41 @@ public class AzureKeyVaultStep extends Step {
             this.azureKeyVaultSecrets = azureKeyVaultSecrets;
         }
 
+        ExecutionImpl(
+                StepContext context,
+                String keyVaultURL,
+                String applicationId,
+                String applicationSecret,
+                String tenantId,
+                List<AzureKeyVaultSecret> azureKeyVaultSecrets
+        ) {
+            super(context);
+            this.keyVaultURL = keyVaultURL;
+            this.applicationId = applicationId;
+            this.applicationSecret = applicationSecret;
+            this.tenantId = tenantId;
+            this.azureKeyVaultSecrets = azureKeyVaultSecrets;
+        }
+
+
         private static final long serialVersionUID = 1L;
+
+        private boolean isLegacyAuth() {
+            return StringUtils.isNotEmpty(applicationId) && StringUtils.isNotEmpty(applicationSecret) && StringUtils.isNotEmpty(tenantId);
+        }
+
+        private TokenCredential getCredential(Run<?, ?> run) {
+            if (isLegacyAuth()) {
+                return new ClientSecretCredentialBuilder()
+                        .clientId(applicationId)
+                        .clientSecret(applicationSecret)
+                        .httpClient(HttpClientRetriever.get())
+                        .tenantId(tenantId)
+                        .build();
+            }
+
+            return getCredentialById(credentialId, run);
+        }
 
         /**
          * {@inheritDoc}
@@ -125,7 +166,7 @@ public class AzureKeyVaultStep extends Step {
             BodyInvoker invoker = context.newBodyInvoker().withCallback(BodyExecutionCallback.wrap(context));
 
             Run<?,?> run = context.get(Run.class);
-            TokenCredential credential = getCredentialById(credentialId, run);
+            TokenCredential credential = getCredential(run);
 
             Map<String, String> secrets = getSecretsMap(credential, keyVaultURL, azureKeyVaultSecrets);
 
@@ -210,7 +251,7 @@ public class AzureKeyVaultStep extends Step {
          */
         @Override @NonNull
         public String getDisplayName() {
-            return "azureKeyVault";
+            return "Bind credentials in Azure Key Vault to environment variables";
         }
 
         @SuppressWarnings("unused")
@@ -237,7 +278,7 @@ public class AzureKeyVaultStep extends Step {
 
         @Override
         public Set<? extends Class<?>> getRequiredContext() {
-            return ImmutableSet.of(Run.class);
+            return Set.of(Run.class);
         }
 
     }
